# letspython

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  CONTRIBUTING.md  Dockerfile  README.md  mkdocs.yml  package.json  pnpm-lock.yaml  pyproject.toml
.devcontainer/: devcontainer.json
docs/: index.md  modules.md
src/letspython/: foo.py
tests/: test_foo.py
